<resources>
    <string name="app_name" translatable="false">PlacarApp</string>
    <string name="hint_timeCasa">Type the Home team\'s name</string>
    <string name="placar_inicial" translatable="false">0</string>
    <string name="hint_timeVisitante">Type the Away team\'s name</string>
    <string name="label_gol">Goal</string>
    <string name="label_titulo">Teams</string>
    <string name="label_timeVisitante">Away</string>
    <string name="label_timeCasa">Home</string>
    <string name="label_proprietario">Developed by Satoru Channel</string>
</resources>
